<?php die(); ?>
Akeeba SocialLogin 4.7.0
================================================================================
+ Login with Amazon
+ Login with Spotify
+ Login with PayPal
# [HIGH] Fatal error on Joomla! 5 [gh-110]

Akeeba SocialLogin 4.6.0
================================================================================
+ Synology SSO support (gh-51)

Akeeba SocialLogin 4.5.1
================================================================================
# [LOW] Possible PHP error when updating this along other extensions using the same post-installation script

Akeeba SocialLogin 4.5.0
================================================================================
~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
~ Joomla 5 preparation: Work around backwards incompatible changes in core plugin events
~ Block uninstallation of child extensions

Akeeba SocialLogin 4.4.2
================================================================================
# [MEDIUM] Redirection after login did not work correctly

Akeeba SocialLogin 4.4.1
================================================================================
# [LOW] Joomla has changed the way we should use to uninstall obsolete extensions

Akeeba SocialLogin 4.4.0
================================================================================
- Removed Twitter integration (gh-93)

Akeeba SocialLogin 4.3.0
================================================================================
+ Joomla 4.2, PHP 7.4+ only
# [LOW] PHP Warning in Console (CLI) application

Akeeba SocialLogin 4.2.0
================================================================================
+ Discord integration
# [HIGH] Error “Form::loadForm could not load file” creating new users

Akeeba SocialLogin 4.1.0
================================================================================
+ Automatically get the redirection URL for com_users login pages