@@ -4,6 +4,7 @@ Akeeba SocialLogin 4.7.0
 + Login with Amazon
 + Login with Spotify
 + Login with PayPal
++ Login with Twitch
 # [HIGH] Fatal error on Joomla! 5 [gh-110]
 
 Akeeba SocialLogin 4.6.0
